--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "@swimlane/ngx-charts": "^17.0.1",
     "jquery": "^3.6.0",
     "ngx-slick-carousel": "^0.5.1",
     "rxjs": "^6.6.7",
